# testing_for_ds_day_2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
data/: dishwasher_registration.csv
data/notes/: slides_day_2.pptx
data/solutions/: pyproject_solution.toml
data/solutions/tests/: conftest_solution.py  test_data_solution.py  test_model_solution.py  test_process_solution.py
dishwashers/: configuration.py  data.py  model.py  process.py
tests/: conftest.py  generate_test_data.py  test_data.py  test_model.py  test_proces.py  test_process.py  test_recipes.py
tests/test_data/: dummy_dishwasher_registration.csv  dummy_recipe_page.txt  generate_test_data.py
